@@ -433,4 +433,26 @@
 34 (lfunorderzero): 0
 34 (lfuntheta): 1.7720013953042806303430908084396944474
 34 (lfunan): [1, 0, 5, 0, -9, 0, 20, 0, -5, 0]
-Total time spent: 2940
+35 (lfun(2+2*I)): 0.91673035030331810308748633408160225704 + 0.0800009210635
+23127009639958438790240026*I
+35 (lfun): 0.79921874363828629008917129529621684333 - 0.10184729711946994015
+173540667599101707*I
+35 (lfuncreate): 0.79921874363828629008917129529621684333 - 0.10184729711946
+994015173540667599101707*I
+35 (lfunderiv): -0.14264428696267351253800531350521303207 + 0.02398185287686
+8081448499767261014439555*I
+35 (lfunlambda): 1.7807945912641855868274898533630165783 - 0.226933010879576
+31713413745580533348830*I
+35 (lfunderivlambda): 0.52081003542624615533195834024597669200 - 0.029375838
+961809596501348902603430873705*I
+35 (lfuncheckfeq): -126
+35 (lfunhardy): 3.3945174411529004850500531435606288502
+35 (lfunorderzero): 0
+35 (lfuntheta): 0.33142868713174619542675563090594092429 - 0.001318047923982
+0115987802664578727253737*I
+35 (lfunan): [1, -1/2 - 0.86602540378443864676372317075293618347*I, -1/2 + 0
+.86602540378443864676372317075293618347*I, -1/2 + 0.866025403784438646763723
+17075293618347*I, -1/2 - 0.86602540378443864676372317075293618347*I, 1, 0, 1
+, -1/2 - 0.86602540378443864676372317075293618347*I, -1/2 + 0.86602540378443
+864676372317075293618347*I]
+Total time spent: 11572
