@@ -107,6 +107,7 @@ BA  30- [libpari] Flx_Fl_sub, Flx_is_totally_split
     31- [libpari] Flx_translate1_basecase
     32- [libpari] Vgaeasytheta
 BA  33- [libpari] RgV_type2, closure_callgen0prec
+BA  34- lfuncreate: support for closures of arity 0
 
   Removed
      1- obsolete function rootsof1_kannan: use nfrootsof1
